Fix missing color bands on glasovanje.

--- a/s/glasovanje-layered/scss/style.scss
+++ b/s/glasovanje-layered/scss/style.scss
@@ -1,6 +1,6 @@
 @import 'parlassets/scss/colors';
-@import 'parlassets/scss/helper';
 @import 'parlassets/scss/breakpoints';
+@import 'parlassets/scss/helper';
 
 text {
   font: 12px sans-serif;
@@ -64,9 +64,10 @@ a.document:hover {
     flex: 1;
 
     .option {
-        display: flex;
-        margin-right: 20px;
         cursor: pointer;
+        display: flex;
+        height: 100%;
+        margin-right: 20px;
 
         .option-marker {
             display: inline-block;
